--- a/css/site.css
+++ b/css/site.css
@@ -1,5 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:300italic,700italic,300,700);
-@-ms-viewport {width:device-width;}
+@-ms-viewport {width:device-width; zoom:1;}
+@-o-viewport {width:device-width; zoom:1;}
+@viewport {width:device-width; zoom:1;}
 
 @media screen,projection {
   
@@ -33,16 +35,27 @@
   
 }
 
-@media only screen and (min-width:40em) {
-  body {padding:4em;}
-  header {width:40%; float:left;}
-  section {width:60%; float:left;}
-  .social {margin:0;}
+/* 530 */
+@media only screen and (min-width:33.125em) {
+  .social li {display:inline-block; *display:inline; *zoom:1; vertical-align:top; width:49%;}
 }
 
-@media only screen and (min-width:50em) {
+/* 640 */
+@media only screen and (min-width:40em) {
+  body {padding:4em;}
   .social {margin:4em 0;}
 }
+
+/* 900 */
+@media only screen and (min-width:56.25em) {
+  .social {width:80%;}
+}
+
+/* 1200 */
+@media only screen and (min-width:75em) {
+  .social {width:60%;}
+}
+
 
 @media print {
   @page { margin:0.5cm; }
